# egg-api

./: .gitignore  Cargo.toml  README.md
deploy/: config.toml.example
src/: presentation.rs
src/presentation/: api.rs
src/presentation/api/: config.rs  errors.rs  main.rs  setup.rs
src/presentation/api/config/: cli.rs  file.rs
src/presentation/api/endpoints/: root.rs
