[package]
name = "egg-api"
version = "0.1.0"
authors = [ "Yarik <ekeew@proton.me>" ]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ekeew/egg-api.git"
license = "GPL-3.0-or-later"

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["cargo"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
